[wizard] Fixed layout so that the white background in the rounded borders of the modal would not be visible.

--- a/semcore/wizard/src/style/wizard.shadow.css
+++ b/semcore/wizard/src/style/wizard.shadow.css
@@ -5,6 +5,7 @@ SWizard {
   max-height: 700px;
   display: flex;
   padding: 0;
+  background: transparent;
 }
 
 SSidebar {
@@ -91,4 +92,5 @@ SContent {
   padding: 40px;
   width: 100%;
   border-radius: 0 var(--rounded-l) var(--rounded-l) 0;
+  background: var(--white);
 }
